Update form and footer

--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,9 @@
                     </div>
                 </div>
             </section>
+            <div align="center">
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScqFSL9BKXqj0Avmip9UbsM_nFGh8NAItGodaMiiRFaAifJCg/viewform?embedded=true" width="1200" height="1050" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            </div>
             <section id="content">
 
                 <div class="container">
@@ -71,7 +74,7 @@
                                         A/49, Near Railway Crossing,<br>
                                         Phardhan, Lakhimpur Kheri</strong><br>
                                     Mobile: <a href="tel:+919140779702">+91-9140779702</a><br>
-                                    E-mail: <a href="mailto:arpan4nation@gmail.com">arpan4nation@gmail.com</a><br>
+                                    E-mail: <a href="mailto:prayasinstitute.in@gmail.com">prayasinstitute.in@gmail.com</a><br>
                                 </address>
                             </div> 
                         </div>
@@ -89,7 +92,7 @@
                                             Phardhan, Lakhimpur Kheri
                                         </p><br>
                                         Mobile: <a href="tel:+919140779702">+91-9140779702</a><br>
-                                        E-mail: <a href="mailto:arpan4nation@gmail.com">arpan4nation@gmail.com</a><br>
+                                        E-mail: <a href="mailto:prayasinstitute.in@gmail.com">prayasinstitute.in@gmail.com</a><br>
                                     </address>
                                 </div>
                             </div>
@@ -99,8 +102,8 @@
                                     <ul class="link-list">
                                         <li><a href="#">Latest Events</a></li>
                                         <li><a href="#">Terms and conditions</a></li>
-                                        <li><a href="#">Privacy policy</a></li>
-                                        <li><a href="#">Career</a></li>
+                                        <li><a href="privacy.html">Privacy policy</a></li>
+                                        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdP3IPAt4LXuRL-3rCl5qtCQ1HfRd5dd9wTMZN2EaPgrjMPww/viewform?usp=sf_link">Career</a></li>
                                         <li><a href="contact.html">Contact us</a></li>
                                     </ul>
                                 </div>
