Objective,index,reponsive enhancement

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Smart Kids Multi-purpose Free Bootstrap Responsive Template</title>
+         <title>Prayas Institute of Education</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="" />
         <meta name="author" content="http://webthemez.com" />
@@ -99,7 +99,15 @@
                                 <div class="block-heading-two">
                                     <h3><span>Why Choose Us?</span></h3>
                                 </div>
-                                <p>Sed ut perspiciaatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur. <br/><br/>Sed ut perspiciaatis iste natus error sit voluptatem probably haven't heard of them accusamus.</p>
+                                <p  class="text-justify">
+                                    ◆Comprehensive coverage of varieties of questions (Practical and theoretical).<br>
+                                    ◆Enrolment of limited number of students in each batch. <br>
+                                    ◆Class-room discussion and participation. <br>
+                                    ◆Special techniques on "How to solve practical problems".<br>
+                                    ◆Special classes on theoretical topics.<br>
+                                    ◆Revision of every topics of every subjects.<br>
+                                    ◆Flexible timing.<br>
+                                </p>
                             </div>
                             <div class="col-md-4">
                                 <div class="block-heading-two">
