--- a/objective.html
+++ b/objective.html
@@ -30,12 +30,12 @@
                         <div class="navbar-collapse collapse ">
                             <ul class="nav navbar-nav">
                                 <li><a href="index.html">Home</a></li> 
-                                <li><a href="objective.html">Objective</a></li>
+                                <li class="active"><a href="objective.html">Objective</a></li>
                                 <li><a href="#">Academic Classes</a></li>
                                 <li><a href="#">Competitive Exam Class</a></li>
                                 <li><a href="#">Entrance Exam Classes</a></li>
                                 <li><a href="about.html">About Us</a></li>
-                                <li class="active"><a href="contact.html">Contact Us</a></li>
+                                <li><a href="contact.html">Contact Us</a></li>
                             </ul>
                         </div>
                     </div>
@@ -45,45 +45,21 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h2 class="pageTitle">Contact Us</h2>
+                            <h2 class="pageTitle">Objective</h2>
                         </div>
                     </div>
                 </div>
             </section>
             <section id="content">
                 <div class="container">
-                    <div class="row">
-                        <div align="center">
-                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScqFSL9BKXqj0Avmip9UbsM_nFGh8NAItGodaMiiRFaAifJCg/viewform?embedded=true" width="100%" height="1050" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section id="content">
+                    <p>
 
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12">
-
-
-                            <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script><div style="overflow:hidden;height:400px;width:100%;"><div id="gmap_canvas" style="height:400px;width:100%;"></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style><a class="google-map-code" href="http://www.trivoo.net" id="get-map-data">trivoo</a></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:14,center:new google.maps.LatLng(27.9886738,80.6467894),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(27.9886738,80.6467894)});infowindow = new google.maps.InfoWindow({content:"<b> A/49, Near Railway Crossing</b><br/> Phardhan, Lakhimpur Kheri<br/> Uttar Pradesh, Bharat" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
-                        </div>
-                    </div>
-
-
-                    <div class="row">
-                        <div class="col-md-12" align="center">
-
-                            <div class="span4"><div class="title-box clearfix "><h3 class="title-box_primary">Contact info</h3></div> 
-                                <address>
-                                    <strong>Prayas Institute Of Education<br>
-                                        A/49, Near Railway Crossing,<br>
-                                        Phardhan, Lakhimpur Kheri</strong><br>
-                                    Mobile: <a href="tel:+919140779702">+91-9140779702</a><br>
-                                    E-mail: <a href="mailto:prayasinstitute.in@gmail.com">prayasinstitute.in@gmail.com</a><br>
-                                </address>
-                            </div> 
-                        </div>
+                        Prayas Institute of Education exists to support students. We adopt a one of a kind and inventive strategy to instructing that assists understudies with interfacing with the topic they have to ace. Through customized and centered showing forms, our understudies build up the apparatuses they requirement for progressing accomplishment in their fields of study. Our prosperity relies upon our regard for the necessities of our understudies and genuinely helping them to accomplish – we don't succeed except if our understudies succeed. 
+                    </p><br><p>
+                    The ethos of Prayas Institute of Education is to perceive the potential in each understudy and give the highest caliber of training to enable them to succeed. We are here to enable our understudies to accomplish their full scholarly potential utilizing one of a kind instructing strategies. Our educators comprise of qualified instructors, experts and current students. We accept that taking in a subject from alternate points of view permits an understudy to completely comprehend the theme. We don't sell dreams; rather we help our understudies progress in the direction of them.
+                    </p><br><p>
+                    Our fundamental objective at Prayas Institute of Education is to guarantee that we can make a situation that will be moving to our understudies and can give them the certainty and excitement to accomplish the most noteworthy potential outcomes. Our instructors are experienced, exceptionally scholastic and endeavor to offer the best quality training.
+                    </p><b><br>
                     </div>
                     </section>
                 <footer>
