Objective,index,reponsive enhancement

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>PIE</title>
+        <title>Pryas Institute of Education</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="" />
         <meta name="author" content="pradeep kumar" />
@@ -32,7 +32,7 @@
                         <div class="navbar-collapse collapse ">
                             <ul class="nav navbar-nav">
                                 <li class="active"><a href="index.html">Home</a></li> 
-                                <li><a href="#">Objective</a></li>
+                                <li><a href="objective.html">Objective</a></li>
                                 <li class="dropdown">
                                     <a class="dropdown-toggle" href="#" data-toggle="dropdown">Academic Classes</a>
                                     <ul class="dropdown-menu">
