--- a/privacy.html
+++ b/privacy.html
@@ -29,7 +29,7 @@
                     <div class="navbar-collapse collapse ">
                         <ul class="nav navbar-nav">
                             <li><a href="index.html">Home</a></li> 
-                            <li><a href="">Objective</a></li>
+                            <li><a href="objective.html">Objective</a></li>
                             <li><a href="#">Academic Classes</a></li>
                             <li><a href="#">Competitive Exam Class</a></li>
                             <li><a href="#">Entrance Exam Classes</a></li>
