Objective,index,reponsive enhancement3

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-         <title>Prayas Institute of Education</title>
+        <title>Prayas Institute of Education</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="" />
         <meta name="author" content="http://webthemez.com" />
@@ -289,7 +289,7 @@
                                         Phardhan, Lakhimpur Kheri
                                     </p><br>
                                     Mobile: <a href="tel:+919140779702">+91-9140779702</a><br>
-                                    E-mail: <a href="mailto:arpan4nation@gmail.com">arpan4nation@gmail.com</a><br>
+                                    E-mail: <a href="mailto:prayasinstitute.in@gmail.com">prayasinstitute.in@gmail.com</a><br>
                                 </address>
                             </div>
                         </div>
@@ -299,8 +299,8 @@
                                 <ul class="link-list">
                                     <li><a href="#">Latest Events</a></li>
                                     <li><a href="#">Terms and conditions</a></li>
-                                    <li><a href="#">Privacy policy</a></li>
-                                    <li><a href="#">Career</a></li>
+                                    <li><a href="privacy.html">Privacy policy</a></li>
+                                    <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdP3IPAt4LXuRL-3rCl5qtCQ1HfRd5dd9wTMZN2EaPgrjMPww/viewform?usp=sf_link">Career</a></li>
                                     <li><a href="contact.html">Contact us</a></li>
                                 </ul>
                             </div>
