--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                                         Phardhan, Lakhimpur Kheri
                                     </p><br>
                                     Mobile: <a href="tel:+919140779702">+91-9140779702</a><br>
-                                    E-mail: <a href="mailto:arpan4nation@gmail.com">arpan4nation@gmail.com</a><br>
+                                    E-mail: <a href="mailto:prayasinstitute.in@gmail.com">prayasinstitute.in@gmail.com</a><br>
                                 </address>
                             </div>
                         </div>
@@ -256,8 +256,8 @@
                                 <ul class="link-list">
                                     <li><a href="#">Latest Events</a></li>
                                     <li><a href="#">Terms and conditions</a></li>
-                                    <li><a href="#">Privacy policy</a></li>
-                                    <li><a href="#">Career</a></li>
+                                    <li><a href="privacy.html">Privacy policy</a></li>
+                                    <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdP3IPAt4LXuRL-3rCl5qtCQ1HfRd5dd9wTMZN2EaPgrjMPww/viewform?usp=sf_link">Career</a></li>
                                     <li><a href="contact.html">Contact us</a></li>
                                 </ul>
                             </div>
