--- a/about.html
+++ b/about.html
@@ -20,13 +20,13 @@
 
     </head>
     <body>
-         <div class="container">
+        <div class="container">
             <div class="row" style="background-color: green;">
-                <div class="col-md-6 col-sm-6 top-reponsive text-center">                      
+                <div class="col-md-9 col-sm-6 top-reponsive ">                      
                     <span style="color: wheat">Contact No:</span><a style="color: white"  href="tel:+919956176774"> +91- 9956176774</a> ,
                     <a style="color: white" href="tel:+919140779702"> +91-9140779702</a>
                 </div>     
-                <div class="col-md-6 col-sm-6 top-reponsive text-center">
+                <div class="col-md-3 col-sm-6 top-reponsive text">
                     <span style="color: wheat">Email: </span><a style="color: white" href="mailto:Prayasinstitute.in@gmail.com">Prayasinstitute.in@gmail.com</a>
                 </div>        
             </div>
@@ -219,7 +219,7 @@
 
                         <div class="team-six">
                             <div class="row">
-                                <div class="col-md-4 col-sm-6">
+                                <div class="col-md-3 col-sm-6">
                                     <!-- Team Member -->
                                     <div class="team-member">
                                         <!-- Image -->
@@ -229,7 +229,7 @@
                                         <span class="deg">B. Tech, MBA<br>Founder <br> Prayas Institute of Education </span> 
                                     </div>
                                 </div>
-                                <div class="col-md-4 col-sm-6">
+                                <div class="col-md-3 col-sm-6">
                                     <!-- Team Member -->
                                     <div class="team-member">
                                         <!-- Image -->
@@ -237,12 +237,12 @@
                                         <!-- Name -->
                                         <h4>Arpan Mishra</h4>
                                         <span class="deg">
-                                        B.Tech, M.Tech, Ph.D (P)<br>
+                                        B.Tech, M.Tech<br>
                                         Co-Founder/Academic Director<br>
                                         Prayas Institute of Education</span> 
                                     </div>
                                 </div>
-                                <div class="col-md-4 col-sm-6">
+                                <div class="col-md-3 col-sm-6">
                                     <!-- Team Member -->
                                     <div class="team-member">
                                         <!-- Image -->
@@ -250,6 +250,16 @@
                                         <!-- Name -->
                                         <h4>Shubham Tripathi</h4>
                                         <span class="deg">B.Tech, MBA<br>Founder  Manager<br> Gramin Vikas Foundation</span> 
+                                    </div>
+                                </div>
+                                <div class="col-md-3 col-sm-6">
+                                    <!-- Team Member -->
+                                    <div class="team-member">
+                                        <!-- Image -->
+                                        <img class="img-responsive" src="img/team4.jpg" alt="">
+                                        <!-- Name -->
+                                        <h4>Vishal Shukla</h4>
+                                        <span class="deg">B.Sc., M.Sc.<br>Academics Head<br> Prayas Institute of Education</span> 
                                     </div>
                                 </div>
                             </div>
