--- a/Entrance_courses.html
+++ b/Entrance_courses.html
@@ -20,13 +20,13 @@
 
     </head>
     <body>
-         <div class="container">
+        <div class="container">
             <div class="row" style="background-color: green;">
-                <div class="col-md-6 col-sm-6 top-reponsive text-center">                      
+                <div class="col-md-9 col-sm-6 top-reponsive ">                      
                     <span style="color: wheat">Contact No:</span><a style="color: white"  href="tel:+919956176774"> +91- 9956176774</a> ,
                     <a style="color: white" href="tel:+919140779702"> +91-9140779702</a>
                 </div>     
-                <div class="col-md-6 col-sm-6 top-reponsive text-center">
+                <div class="col-md-3 col-sm-6 top-reponsive text">
                     <span style="color: wheat">Email: </span><a style="color: white" href="mailto:Prayasinstitute.in@gmail.com">Prayasinstitute.in@gmail.com</a>
                 </div>        
             </div>
