--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
         <link href="css/flexslider.css" rel="stylesheet" />
         <link href="js/owl-carousel/owl.carousel.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet" />
+        <link rel="icon" href="img/pie.png" type="image/x-icon">
         <!--end css -->
     </head>
     <body>
         <div class="container">
             <div class="row" style="background-color: green;">
-                <div class="col-md-6 col-sm-6 top-reponsive text-center">                      
+                <div class="col-md-9 col-sm-6 top-reponsive ">                      
                     <span style="color: wheat">Contact No:</span><a style="color: white"  href="tel:+919956176774"> +91- 9956176774</a> ,
                     <a style="color: white" href="tel:+919140779702"> +91-9140779702</a>
                 </div>     
-                <div class="col-md-6 col-sm-6 top-reponsive text-center">
+                <div class="col-md-3 col-sm-6 top-reponsive text">
                     <span style="color: wheat">Email: </span><a style="color: white" href="mailto:Prayasinstitute.in@gmail.com">Prayasinstitute.in@gmail.com</a>
                 </div>        
             </div>
@@ -63,8 +64,8 @@
                             <img src="img/slides/1.jpg" alt="" />
                             <div class="flex-caption">
                                 <div class="item_introtext"> 
-                                    <strong>Our Institute </strong>
-                                    <p>The best educational institue</p> </div>
+                                    <strong>Prayas Institute of Education </strong>
+                                    <p>A leading educational institute</p> </div>
                             </div>
                         </li>
                         <li>
@@ -92,8 +93,14 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
-                            <div class="aligncenter"><h1 class="aligncenter">
-                                SmartKids...Your Kids Buddy</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus, vero mollitia velit ad consectetur. Alias, laborum excepturi nihil autem nemo numquam, ipsa architecto non, magni consequuntur quam.</div>
+                            <div class=""><h1 class="aligncenter">
+                               Committed Teaching- Best Result</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>The Institute was founded in Lakhimpur, Uttar Pradesh under the aegis of Gramin Vikas Foundation (NGO) with the concept to provide objective centric coaching in a different, innovative and affable learning environment in the challenging field of Competitive Examination preparation.<br><br>
+                               Prayas Institute of Education is a renowned and well-known name in the field of education providing classroom training to aspirants intending to prepare and appear in various academic, competitive, entrance, talent search and scholarship examinations of national and international level such as VI to XII (For All Boards), Banking, SSC, Railway, NET, IIT-JEE (JEE Mains and Advanced), NEET (National Eligibility cum Entrance Test – for Medical College Admissions) etc.<br><br>
+                                In short span of its inception as an Institute, Prayas Institute of Education has risen above all expectations and the volume and quality of its results have proven the success of its mission and objectives:<br>
+                                ◆To embrace the idea of inclusiveness along with academic excellence.<br>
+                                ◆To drive the value system by innovation and improvement in quality of services.<br>
+                                ◆Ultimately achieve the aims and objectives, enhance the success rate and provide utmost satisfaction to students and their parents/guardians.
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -105,21 +112,21 @@
                     <div class="row">
                         <div class="skill-home"> <div class="skill-home-solid clearfix"> 
                             <div class="col-md-3 text-center">
-                                <span class="icons c1"><i class="fa fa-trophy"></i></span> <div class="box-area">
-                                <h3>Web Development</h3> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident</p></div>
+                                <span class="icons c1"><img src="img/works/teaching.jpg"></span> <div class="box-area">
+                                <h3>Teaching</h3></div>
                             </div>
                             <div class="col-md-3 text-center"> 
-                                <span class="icons c2"><i class="fa fa-picture-o"></i></span> <div class="box-area">
-                                <h3>UI Design</h3> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident</p></div>
+                                <span class="icons c2"><img src="img/works/counselling.jpg"></i></span> <div class="box-area">
+                                <h3>Counselling</h3></div>
                             </div>
                             <div class="col-md-3 text-center"> 
-                                <span class="icons c3"><i class="fa fa-desktop"></i></span> <div class="box-area">
-                                <h3>Interaction</h3> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident</p></div>
+                                <span class="icons c3"><img src="img/works/mentoring.jpg"></i></span> <div class="box-area">
+                                <h3>Mentoring</h3></div>
                             </div>
                             <div class="col-md-3 text-center"> 
-                                <span class="icons c4"><i class="fa fa-globe"></i></span> <div class="box-area">
-                                <h3>User Experiance</h3> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident</p>
-                                </div></div>
+                                <span class="icons c4"><img src="img/works/contentWritting.jpg"></span> <div class="box-area">
+                                <h3>Content Writing</h3></div>
+                            </div>
                             </div></div>
                     </div> 
 
@@ -151,27 +158,27 @@
                             </ol>
                             <div class="carousel-inner">
                                 <div class="item">
-                                    <p>Blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi.</p>
+                                    <p>Awesome faculty team with excellent knowledge.</p>
                                     <p>
-                                        <b>- Mark John -</b>
+                                        <b>-  Anshuman Shukla -</b>
                                     </p>
                                 </div>
                                 <div class="item">
-                                    <p>Blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi.</p>
+                                    <p>Faculties are very helpful and their their teaching methodology is quite awesome.</p>
                                     <p>
-                                        <b>- Jaison Warner -</b>
+                                        <b>- Atul Mishra -</b>
                                     </p>
                                 </div>
                                 <div class="item active">
-                                    <p>Blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi.</p>
+                                    <p>For my sons, I find this institute as best.</p>
                                     <p>
-                                        <b>- Tony Antonio -</b>
+                                        <b>- Shiv Kumar Shukla -</b>
                                     </p>
                                 </div>
                                 <div class="item">
-                                    <p>Blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi.</p>
+                                    <p>For me, best and qualitative education in Lakhimpur means Prayas Institute of Education.</p>
                                     <p>
-                                        <b>- Leena Doe -</b>
+                                        <b>- Abdul Waheed -</b>
                                     </p>
                                 </div>
                             </div>
